# apg-6.3

./: .gitignore  DoxyFooter.html  DoxyHeader.html  Doxyfile  Makefile  Makefile.am  Makefile.in  README.html  README.md  config.h.in  configure  configure.ac
ApgLib/: Apg.h  Ast.c  Grammar.h  Memory.c  Operators.c  Parser.c  Private.h  Stats.c  Tools.c  Trace.c  UdtLib.c  Vector.c
ApgUtilities/: ApgUtilities.h  Files.c  Utilities.c  timer.c
CppDemo/: CppDemo.bnf  CppDemo.cpp  CppDemo.h  CppDemoCallbacks.cpp  generateGrammars  main.cpp  main.h  runtests
Demo/: Callbacks.bnf  Callbacks.c  Callbacks.input  Callbacks.output  CallbacksGrammar.c  CallbacksGrammar.h  Setup.bnf  Setup.c  Setup.input  Setup.output  SetupGrammar.c  SetupGrammar.h  UdtLib.bnf  UdtLib.output  UdtLibDemo.c  UdtLibGrammar.c  UdtLibGrammar.h  generateGrammars  main.c  main.h  runtests
Generator/: AbnfForSabnf.bnf  Attributes.c  AttributesDependencies.c  AttributesNonRecursive.c  AttributesRecursive.c  Callbacks.c  Callbacks.h  CatalogLines.c  CommandLine.c  CommandLine.h  Errors.c  Generator.c  Generator.h  SABNFGrammar.c  SABNFGrammar.h  generateGrammars  main.c  runtests
MEGACO/: Callbacks.cpp  MEGACO.bnf  MEGACO.cpp  MEGACO.h  MEGACO.input  generateGrammars  main.cpp  runtests
SIP/: Grammar1.bnf  Grammar1.c  Grammar1.h  Grammar2.bnf  Grammar2.c  Grammar2.h  Grammar3.bnf  Grammar3.c  Grammar3.h  Grammar4.bnf  Grammar4.c  Grammar4.h  Grammar5.bnf  Grammar5.c  Grammar5.h  Messages.c  SIP.bnf  SIPGrammar.c  SIPGrammar.h  SIPUdtLib.c  TestUdts.c  TortureTestTranslator.c  TortureTests.txt  generateGrammars  main.c  main.h  runtests
WideCharacters/: Callbacks.c  WideCharacters.bnf  WideGrammar.c  WideGrammar.h  generateGrammars  main.c  main.h  runtests
